2007-11-13  Marcus Brinkmann  <marcus@g10code.de>

	* src/make-msi.pl: New file.
	* src/make-msi.bat: New file.
	* src/make-msi.guids: New file.
	* src/gpl.rtf: New file.

2007-11-12  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to kleopatra 20071112.

	* packages/packages.current: Update to kleopatra 20071109.

2007-11-08  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-gpgex.nsi: Add online documentation.
	* src/uninst-gpgex.nsi: Delete online documentation and other
	directories.

	* packages/packages.current: Update gpgex.

2007-11-02  Werner Koch  <wk@g10code.com>

	* src/g4wihelp.c (path_add): Remove debug stuff.

	* src/inst-kleopatra.nsi: Adjust location for some DLLs.

2007-10-26  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Add libetpan.
	* configure.ac: Add libetpan package.
	* include/config.nsi.in: Add support for libetpan.
	* src/Makefile.am (EXTRA_DIST): Add inst-libetpan.nsi and
	uninst-libetpan.nsi.
	(gpg4win_spkgs): Add libetpan.
	(gpg4win_pkg_libetpan_configure): New variable.
	* src/uninst-libetpan.nsi, src/inst-libetpan.nsi: New files.
	* src/gpg4win.mk.in: Invoke configure with relative path to make
	it easier on some packages (in particular libetpan).
	(SETVRS): Add install bin directory to PATH.

2007-10-29  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update to libgpg-error 1.6.

2007-10-26  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update to libgcrypt 1.3.1.

2007-10-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Updated gpgol.

2007-10-18  Marcus Brinkmann  <marcus@g10code.de>

	* src/g4wihelp.c (read_w32_registry_string): New function.
	(ENV_HK, ENV_REG): New macros.
	(path_add, path_remove): New functions.
	* src/gpg4win.nsi: Remove GpgEX from light installer.
	* src/installer.nsi (AddToPath, RemoveFromPath): Rewritten.

2007-10-17  Marcus Brinkmann  <marcus@g10code.de>
