@@ -1,3 +1,11 @@
+2007-11-14  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/inst-kleopatra.nsi: Prefix kleopatra.bat by $BUILD_DIR.
+	* src/make-msi.pl: Add INSTDIR\pub to PATH environment for gnupg.
+	Handle /oname in File statements.  Handle upgrades.  Register
+	DLLs.  Register services.
+	* src/make-msi.guids: Update.
+
 2007-11-13  Marcus Brinkmann  <marcus@g10code.de>
 
 	* src/make-msi.pl: New file.
